--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
@@ -15,12 +16,14 @@
     "highcharts": "^11.3.0",
     "highcharts-exporting": "^0.1.7",
     "highcharts-react-official": "^3.2.1",
+    "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
   },
