--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^31.0.3",
+    "ag-grid-enterprise": "^31.0.3",
+    "ag-grid-react": "^31.0.3",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "highcharts": "^11.3.0",
