--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "highcharts-exporting": "^0.1.7",
     "highcharts-react-official": "^3.2.1",
     "mdb-react-ui-kit": "^7.2.0",
+    "pdfmake": "^0.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
