--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "highcharts": "^11.3.0",
     "highcharts-exporting": "^0.1.7",
     "highcharts-react-official": "^3.2.1",
+    "i18next": "^23.9.0",
     "mdb-react-ui-kit": "^7.2.0",
     "pdfmake": "^0.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.5",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
