--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "highcharts-exporting": "^0.1.7",
     "highcharts-react-official": "^3.2.1",
     "i18next": "^23.9.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "mdb-react-ui-kit": "^7.2.0",
     "pdfmake": "^0.2.9",
     "react": "^18.2.0",
