--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pdfmake": "^0.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-data-grid": "^7.0.0-beta.42",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
     "react-redux": "^9.1.0",
