--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "ag-grid-community": "^31.0.3",
     "ag-grid-enterprise": "^31.0.3",
     "ag-grid-react": "^31.0.3",
+    "antd": "^5.15.3",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "highcharts": "^11.3.0",
     "highcharts-exporting": "^0.1.7",
+    "highcharts-more": "^0.1.7",
     "highcharts-react-official": "^3.2.1",
     "i18next": "^23.9.0",
     "jspdf": "^2.5.1",
