--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
+    "react-tree-graph": "^8.0.1",
     "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
   },
